# runbook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
datasets/style_mix_untransformed/: README.md  manifest.json
examples/: README.md  pytorch_t4_jupytext_smoke.py  pytorch_t4_smoke.ipynb
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
runbook/: __init__.py  cli.py  convert.py  events.py  execute.py  files.py  modal_app.py  progress.py  requirements_plan.py  settings.py
scripts/: make_style_mix_dataset.py
tests/: test_cli.py  test_convert.py  test_execute.py  test_modal_integration.py  test_requirements_plan.py  test_settings.py
