[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "runbook"
version = "0.1.0"
description = "Execute Jupyter notebooks remotely on Modal and write executed ipynb files locally."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ipykernel",
  "jupytext",
  "modal",
  "nbclient",
  "nbformat",
  "rich",
  "typer",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
runbook = "runbook.cli:app"

[tool.setuptools.packages.find]
include = ["runbook*"]

[tool.pytest.ini_options]
markers = [
  "modal_integration: runs a real notebook on Modal and requires Modal credentials",
]
testpaths = ["tests"]
