[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "runbook"
version = "0.1.0"
description = "Execute Jupyter notebooks remotely on Modal and write executed ipynb files locally."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "ipykernel",
  "jupytext",
  "modal",
  "nbclient",
  "nbformat",
  "PyYAML",
  "rich",
  "typer",
]

[project.optional-dependencies]
test = [
  "mypy",
  "pytest",
  "ruff",
  "types-PyYAML",
]

[project.scripts]
runbook = "runbook.cli:app"

[tool.setuptools.packages.find]
include = ["runbook*"]

[tool.pytest.ini_options]
markers = [
  "modal_integration: runs a real notebook on Modal and requires Modal credentials",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_ignores = true
check_untyped_defs = true
